--- a/pos-creator/src/main/resources/homer/tastyworld/frontend/poscreator/tastyworld-pos-creator.fxml
+++ b/pos-creator/src/main/resources/homer/tastyworld/frontend/poscreator/tastyworld-pos-creator.fxml
@@ -6,12 +6,13 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Font?>
 
 <AnchorPane fx:id="base" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="550.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="homer.tastyworld.frontend.poscreator.POSCreatorController">
    <children>
-      <AnchorPane fx:id="mainPaneParent" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+      <AnchorPane fx:id="mainPaneParent" visible="false" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <children>
             <GridPane fx:id="mainPaneGridNodeContainer" gridLinesVisible="true" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
               <columnConstraints>
@@ -378,7 +379,8 @@
                      <columnConstraints>
                         <ColumnConstraints hgrow="SOMETIMES" percentWidth="2.0" />
                         <ColumnConstraints hgrow="SOMETIMES" />
-                        <ColumnConstraints hgrow="SOMETIMES" percentWidth="76.0" />
+                        <ColumnConstraints hgrow="SOMETIMES" percentWidth="46.0" />
+                        <ColumnConstraints hgrow="SOMETIMES" percentWidth="30.0" />
                         <ColumnConstraints hgrow="SOMETIMES" />
                         <ColumnConstraints hgrow="SOMETIMES" percentWidth="2.0" />
                      </columnConstraints>
@@ -389,8 +391,9 @@
                      </rowConstraints>
                      <children>
                         <AnchorPane fx:id="endOrderCreatingOpenMenuImgBtn" onMouseClicked="#endOrderCreatingOpenMenuImgBtnPressed" GridPane.columnIndex="1" GridPane.rowIndex="1" />
-                        <AnchorPane fx:id="endOrderCreatingTopic" GridPane.columnIndex="2" GridPane.rowIndex="1" />
-                        <AnchorPane fx:id="endOrderCreatingCommitImgBtn" onMouseClicked="#endOrderCreatingCommitImgBtnPressed" GridPane.columnIndex="3" GridPane.rowIndex="1" />
+                        <AnchorPane fx:id="endOrderCreatingNameTopic" GridPane.columnIndex="2" GridPane.rowIndex="1" />
+                        <AnchorPane fx:id="endOrderCreatingTotalPriceTopic" prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="3" GridPane.rowIndex="1" />
+                        <AnchorPane fx:id="endOrderCreatingCommitImgBtn" onMouseClicked="#endOrderCreatingCommitImgBtnPressed" GridPane.columnIndex="4" GridPane.rowIndex="1" />
                      </children>
                   </GridPane>
                   <GridPane fx:id="endOrderCreatingItemsContainer" alignment="CENTER" gridLinesVisible="true" GridPane.rowIndex="2">
@@ -414,7 +417,7 @@
                             <RowConstraints vgrow="SOMETIMES" />
                           </rowConstraints>
                            <children>
-                              <TextField fx:id="endOrderCreatingDeliveryField" promptText="Адрес доставки">
+                              <TextField fx:id="endOrderCreatingDeliveryField" onMouseClicked="#showVirtualKeyboardParentPane" promptText="Адрес доставки">
                                  <font>
                                     <Font size="27.0" />
                                  </font>
@@ -428,6 +431,29 @@
                         </GridPane>
                      </children>
                   </GridPane>
+               </children>
+            </GridPane>
+         </children>
+      </AnchorPane>
+      <AnchorPane fx:id="virtualKeyboardPaneParent" visible="false" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+         <children>
+            <GridPane layoutX="143.0" layoutY="241.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+              <columnConstraints>
+                  <ColumnConstraints hgrow="SOMETIMES" percentWidth="2.0" />
+                <ColumnConstraints hgrow="SOMETIMES" />
+                  <ColumnConstraints hgrow="SOMETIMES" percentWidth="2.0" />
+              </columnConstraints>
+              <rowConstraints>
+                <RowConstraints vgrow="SOMETIMES" />
+                <RowConstraints percentHeight="10.0" vgrow="SOMETIMES" />
+                  <RowConstraints percentHeight="1.0" vgrow="SOMETIMES" />
+                <RowConstraints percentHeight="45.0" vgrow="SOMETIMES" />
+                  <RowConstraints percentHeight="2.0" vgrow="SOMETIMES" />
+              </rowConstraints>
+               <children>
+                  <AnchorPane onMouseClicked="#hideVirtualKeyboardParentPane" GridPane.columnIndex="1" />
+                  <HBox fx:id="virtualKeyboardPrompts" alignment="CENTER" onMouseClicked="#hideVirtualKeyboardParentPane" spacing="10.0" style="-fx-background-color: #F5F5F5; -fx-background-radius: 10; -fx-border-color: #808080; -fx-border-radius: 10;" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+                  <AnchorPane fx:id="virtualKeyboardPlace" style="-fx-background-color: #F5F5F5; -fx-background-radius: 10; -fx-border-color: #808080; -fx-border-radius: 10;" GridPane.columnIndex="1" GridPane.rowIndex="3" />
                </children>
             </GridPane>
          </children>
