--- a/pos-creator/src/main/resources/homer/tastyworld/frontend/poscreator/tastyworld-pos-creator.fxml
+++ b/pos-creator/src/main/resources/homer/tastyworld/frontend/poscreator/tastyworld-pos-creator.fxml
@@ -392,7 +392,7 @@
                      <children>
                         <AnchorPane fx:id="endOrderCreatingOpenMenuImgBtn" onMouseClicked="#endOrderCreatingOpenMenuImgBtnPressed" GridPane.columnIndex="1" GridPane.rowIndex="1" />
                         <AnchorPane fx:id="endOrderCreatingNameTopic" GridPane.columnIndex="2" GridPane.rowIndex="1" />
-                        <AnchorPane fx:id="endOrderCreatingTotalPriceTopic" prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="3" GridPane.rowIndex="1" />
+                        <AnchorPane fx:id="endOrderCreatingTotalPriceTopic" GridPane.columnIndex="3" GridPane.rowIndex="1" />
                         <AnchorPane fx:id="endOrderCreatingCommitImgBtn" onMouseClicked="#endOrderCreatingCommitImgBtnPressed" GridPane.columnIndex="4" GridPane.rowIndex="1" />
                      </children>
                   </GridPane>
@@ -454,6 +454,94 @@
                   <AnchorPane onMouseClicked="#hideVirtualKeyboardParentPane" GridPane.columnIndex="1" />
                   <HBox fx:id="virtualKeyboardPrompts" alignment="CENTER" onMouseClicked="#hideVirtualKeyboardParentPane" spacing="10.0" style="-fx-background-color: #F5F5F5; -fx-background-radius: 10; -fx-border-color: #808080; -fx-border-radius: 10;" GridPane.columnIndex="1" GridPane.rowIndex="1" />
                   <AnchorPane fx:id="virtualKeyboardPlace" style="-fx-background-color: #F5F5F5; -fx-background-radius: 10; -fx-border-color: #808080; -fx-border-radius: 10;" GridPane.columnIndex="1" GridPane.rowIndex="3" />
+               </children>
+            </GridPane>
+         </children>
+      </AnchorPane>
+      <AnchorPane fx:id="lookOrderPaneParent" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+         <children>
+            <GridPane AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+              <columnConstraints>
+                <ColumnConstraints hgrow="SOMETIMES" />
+                  <ColumnConstraints hgrow="SOMETIMES" percentWidth="80.0" />
+                <ColumnConstraints hgrow="SOMETIMES" />
+              </columnConstraints>
+              <rowConstraints>
+                <RowConstraints percentHeight="15.0" vgrow="SOMETIMES" />
+                <RowConstraints percentHeight="70.0" vgrow="SOMETIMES" />
+                <RowConstraints percentHeight="15.0" vgrow="SOMETIMES" />
+              </rowConstraints>
+               <children>
+                  <AnchorPane style="-fx-background-color: #F5F5F5; -fx-background-radius: 25; -fx-border-color: #999999; -fx-border-radius: 25;" GridPane.columnIndex="1" GridPane.rowIndex="1">
+                     <children>
+                        <GridPane gridLinesVisible="true" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                           <columnConstraints>
+                              <ColumnConstraints hgrow="SOMETIMES" percentWidth="100.0" />
+                           </columnConstraints>
+                           <rowConstraints>
+                              <RowConstraints vgrow="SOMETIMES" />
+                              <RowConstraints percentHeight="2.0" vgrow="SOMETIMES" />
+                              <RowConstraints percentHeight="80.0" vgrow="SOMETIMES" />
+                           </rowConstraints>
+                           <children>
+                              <GridPane gridLinesVisible="true">
+                                 <columnConstraints>
+                                    <ColumnConstraints hgrow="SOMETIMES" percentWidth="2.0" />
+                                    <ColumnConstraints hgrow="SOMETIMES" />
+                                    <ColumnConstraints hgrow="SOMETIMES" percentWidth="46.0" />
+                                    <ColumnConstraints hgrow="SOMETIMES" percentWidth="30.0" />
+                                    <ColumnConstraints hgrow="SOMETIMES" />
+                                    <ColumnConstraints hgrow="SOMETIMES" percentWidth="2.0" />
+                                 </columnConstraints>
+                                 <rowConstraints>
+                                    <RowConstraints vgrow="SOMETIMES" />
+                                    <RowConstraints percentHeight="75.0" vgrow="SOMETIMES" />
+                                    <RowConstraints vgrow="SOMETIMES" />
+                                 </rowConstraints>
+                                 <children>
+                                    <AnchorPane fx:id="lookOrderClosePaneImgBtn" onMouseClicked="#endOrderCreatingOpenMenuImgBtnPressed" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+                                    <AnchorPane fx:id="lookOrderNameTopic" GridPane.columnIndex="2" GridPane.rowIndex="1" />
+                                    <AnchorPane fx:id="lookOrderTotalPriceTopic" GridPane.columnIndex="3" GridPane.rowIndex="1" />
+                                    <AnchorPane fx:id="lookOrderSetDoneImgBtn" onMouseClicked="#endOrderCreatingCommitImgBtnPressed" GridPane.columnIndex="4" GridPane.rowIndex="1" />
+                                 </children>
+                              </GridPane>
+                              <GridPane fx:id="lookOrderItemsContainer" alignment="CENTER" gridLinesVisible="true" GridPane.rowIndex="2">
+                                 <columnConstraints>
+                                    <ColumnConstraints hgrow="SOMETIMES" />
+                                    <ColumnConstraints hgrow="SOMETIMES" percentWidth="92.0" />
+                                    <ColumnConstraints hgrow="SOMETIMES" />
+                                 </columnConstraints>
+                                 <rowConstraints>
+                                    <RowConstraints vgrow="SOMETIMES" />
+                                    <RowConstraints percentHeight="88.0" vgrow="SOMETIMES" />
+                                 </rowConstraints>
+                                 <children>
+                                    <GridPane GridPane.columnIndex="1">
+                                       <columnConstraints>
+                                          <ColumnConstraints hgrow="SOMETIMES" percentWidth="75.0" />
+                                          <ColumnConstraints hgrow="SOMETIMES" />
+                                          <ColumnConstraints hgrow="SOMETIMES" percentWidth="20.0" />
+                                       </columnConstraints>
+                                       <rowConstraints>
+                                          <RowConstraints vgrow="SOMETIMES" />
+                                       </rowConstraints>
+                                       <children>
+                                          <TextField fx:id="lookOrderDeliveryField" promptText="Адрес доставки">
+                                             <font>
+                                                <Font size="17.0" />
+                                             </font>
+                                          </TextField>
+                                       </children>
+                                    </GridPane>
+                                 </children>
+                              </GridPane>
+                           </children>
+                        </GridPane>
+                     </children>
+                     <GridPane.margin>
+                        <Insets />
+                     </GridPane.margin>
+                  </AnchorPane>
                </children>
             </GridPane>
          </children>
