--- a/pos-creator/src/main/resources/homer/tastyworld/frontend/poscreator/tastyworld-pos-creator.fxml
+++ b/pos-creator/src/main/resources/homer/tastyworld/frontend/poscreator/tastyworld-pos-creator.fxml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.CheckBox?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
@@ -435,43 +436,24 @@
             </GridPane>
          </children>
       </AnchorPane>
-      <AnchorPane fx:id="virtualKeyboardPaneParent" visible="false" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
-         <children>
-            <GridPane layoutX="143.0" layoutY="241.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
-              <columnConstraints>
-                  <ColumnConstraints hgrow="SOMETIMES" percentWidth="2.0" />
-                <ColumnConstraints hgrow="SOMETIMES" />
-                  <ColumnConstraints hgrow="SOMETIMES" percentWidth="2.0" />
-              </columnConstraints>
-              <rowConstraints>
-                <RowConstraints vgrow="SOMETIMES" />
-                <RowConstraints percentHeight="10.0" vgrow="SOMETIMES" />
-                  <RowConstraints percentHeight="1.0" vgrow="SOMETIMES" />
-                <RowConstraints percentHeight="45.0" vgrow="SOMETIMES" />
-                  <RowConstraints percentHeight="2.0" vgrow="SOMETIMES" />
-              </rowConstraints>
-               <children>
-                  <AnchorPane onMouseClicked="#hideVirtualKeyboardParentPane" GridPane.columnIndex="1" />
-                  <HBox fx:id="virtualKeyboardPrompts" alignment="CENTER" onMouseClicked="#hideVirtualKeyboardParentPane" spacing="10.0" style="-fx-background-color: #F5F5F5; -fx-background-radius: 10; -fx-border-color: #808080; -fx-border-radius: 10;" GridPane.columnIndex="1" GridPane.rowIndex="1" />
-                  <AnchorPane fx:id="virtualKeyboardPlace" style="-fx-background-color: #F5F5F5; -fx-background-radius: 10; -fx-border-color: #808080; -fx-border-radius: 10;" GridPane.columnIndex="1" GridPane.rowIndex="3" />
-               </children>
-            </GridPane>
-         </children>
-      </AnchorPane>
-      <AnchorPane fx:id="lookOrderPaneParent" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+      <AnchorPane fx:id="lookOrderPaneParent" visible="false" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <children>
             <GridPane AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
               <columnConstraints>
                 <ColumnConstraints hgrow="SOMETIMES" />
-                  <ColumnConstraints hgrow="SOMETIMES" percentWidth="80.0" />
+                  <ColumnConstraints hgrow="SOMETIMES" percentWidth="85.0" />
                 <ColumnConstraints hgrow="SOMETIMES" />
               </columnConstraints>
               <rowConstraints>
-                <RowConstraints percentHeight="15.0" vgrow="SOMETIMES" />
-                <RowConstraints percentHeight="70.0" vgrow="SOMETIMES" />
-                <RowConstraints percentHeight="15.0" vgrow="SOMETIMES" />
+                <RowConstraints vgrow="SOMETIMES" />
+                <RowConstraints percentHeight="85.0" vgrow="SOMETIMES" />
+                <RowConstraints vgrow="SOMETIMES" />
               </rowConstraints>
                <children>
+                  <AnchorPane onMouseClicked="#closeLookOrderPane" />
+                  <AnchorPane onMouseClicked="#closeLookOrderPane" GridPane.columnIndex="1" />
+                  <AnchorPane onMouseClicked="#closeLookOrderPane" GridPane.columnIndex="2" />
+                  <AnchorPane onMouseClicked="#closeLookOrderPane" GridPane.rowIndex="1" />
                   <AnchorPane style="-fx-background-color: #F5F5F5; -fx-background-radius: 25; -fx-border-color: #999999; -fx-border-radius: 25;" GridPane.columnIndex="1" GridPane.rowIndex="1">
                      <children>
                         <GridPane gridLinesVisible="true" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
@@ -499,10 +481,10 @@
                                     <RowConstraints vgrow="SOMETIMES" />
                                  </rowConstraints>
                                  <children>
-                                    <AnchorPane fx:id="lookOrderClosePaneImgBtn" onMouseClicked="#endOrderCreatingOpenMenuImgBtnPressed" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+                                    <AnchorPane fx:id="lookOrderClosePaneImgBtn" onMouseClicked="#closeLookOrderPane" GridPane.columnIndex="1" GridPane.rowIndex="1" />
                                     <AnchorPane fx:id="lookOrderNameTopic" GridPane.columnIndex="2" GridPane.rowIndex="1" />
                                     <AnchorPane fx:id="lookOrderTotalPriceTopic" GridPane.columnIndex="3" GridPane.rowIndex="1" />
-                                    <AnchorPane fx:id="lookOrderSetDoneImgBtn" onMouseClicked="#endOrderCreatingCommitImgBtnPressed" GridPane.columnIndex="4" GridPane.rowIndex="1" />
+                                    <AnchorPane fx:id="lookOrderSetDoneImgBtn" onMouseClicked="#lookOrderSetDoneImgBtnPressed" GridPane.columnIndex="4" GridPane.rowIndex="1" />
                                  </children>
                               </GridPane>
                               <GridPane fx:id="lookOrderItemsContainer" alignment="CENTER" gridLinesVisible="true" GridPane.rowIndex="2">
@@ -516,7 +498,7 @@
                                     <RowConstraints percentHeight="88.0" vgrow="SOMETIMES" />
                                  </rowConstraints>
                                  <children>
-                                    <GridPane GridPane.columnIndex="1">
+                                    <GridPane alignment="CENTER" GridPane.columnIndex="1">
                                        <columnConstraints>
                                           <ColumnConstraints hgrow="SOMETIMES" percentWidth="75.0" />
                                           <ColumnConstraints hgrow="SOMETIMES" />
@@ -526,11 +508,16 @@
                                           <RowConstraints vgrow="SOMETIMES" />
                                        </rowConstraints>
                                        <children>
-                                          <TextField fx:id="lookOrderDeliveryField" promptText="Адрес доставки">
+                                          <TextField fx:id="lookOrderDeliveryField" onMouseClicked="#showVirtualKeyboardParentPane" promptText="Адрес доставки">
                                              <font>
                                                 <Font size="17.0" />
                                              </font>
                                           </TextField>
+                                          <Button fx:id="lookOrderSetPaidBtn" alignment="CENTER" contentDisplay="CENTER" focusTraversable="false" mnemonicParsing="false" onAction="#lookOrderSetPaidBtnPressed" text="Оплачен" GridPane.columnIndex="2">
+                                             <font>
+                                                <Font size="18.0" />
+                                             </font>
+                                          </Button>
                                        </children>
                                     </GridPane>
                                  </children>
@@ -542,6 +529,33 @@
                         <Insets />
                      </GridPane.margin>
                   </AnchorPane>
+                  <AnchorPane onMouseClicked="#closeLookOrderPane" GridPane.columnIndex="2" GridPane.rowIndex="1" />
+                  <AnchorPane onMouseClicked="#closeLookOrderPane" GridPane.rowIndex="2" />
+                  <AnchorPane onMouseClicked="#closeLookOrderPane" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+                  <AnchorPane onMouseClicked="#closeLookOrderPane" GridPane.columnIndex="2" GridPane.rowIndex="2" />
+               </children>
+            </GridPane>
+         </children>
+      </AnchorPane>
+      <AnchorPane fx:id="virtualKeyboardPaneParent" visible="false" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+         <children>
+            <GridPane layoutX="143.0" layoutY="241.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+              <columnConstraints>
+                  <ColumnConstraints hgrow="SOMETIMES" percentWidth="2.0" />
+                <ColumnConstraints hgrow="SOMETIMES" />
+                  <ColumnConstraints hgrow="SOMETIMES" percentWidth="2.0" />
+              </columnConstraints>
+              <rowConstraints>
+                <RowConstraints vgrow="SOMETIMES" />
+                <RowConstraints percentHeight="10.0" vgrow="SOMETIMES" />
+                  <RowConstraints percentHeight="1.0" vgrow="SOMETIMES" />
+                <RowConstraints percentHeight="45.0" vgrow="SOMETIMES" />
+                  <RowConstraints percentHeight="2.0" vgrow="SOMETIMES" />
+              </rowConstraints>
+               <children>
+                  <AnchorPane onMouseClicked="#hideVirtualKeyboardParentPane" GridPane.columnIndex="1" />
+                  <HBox fx:id="virtualKeyboardPrompts" alignment="CENTER" onMouseClicked="#hideVirtualKeyboardParentPane" spacing="10.0" style="-fx-background-color: #F5F5F5; -fx-background-radius: 10; -fx-border-color: #808080; -fx-border-radius: 10;" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+                  <AnchorPane fx:id="virtualKeyboardPlace" style="-fx-background-color: #F5F5F5; -fx-background-radius: 10; -fx-border-color: #808080; -fx-border-radius: 10;" GridPane.columnIndex="1" GridPane.rowIndex="3" />
                </children>
             </GridPane>
          </children>
