--- a/pos-processor/src/main/resources/homer/tastyworld/frontend/pos/processor/tastyworld-pos-processor.fxml
+++ b/pos-processor/src/main/resources/homer/tastyworld/frontend/pos/processor/tastyworld-pos-processor.fxml
@@ -8,7 +8,7 @@
 
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="550.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="homer.tastyworld.frontend.pos.processor.POSProcessorController">
    <children>
-      <GridPane alignment="CENTER" gridLinesVisible="true" layoutX="115.0" layoutY="171.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+      <GridPane alignment="CENTER" layoutX="115.0" layoutY="171.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
         <columnConstraints>
             <ColumnConstraints hgrow="SOMETIMES" percentWidth="1.0" />
           <ColumnConstraints hgrow="SOMETIMES" percentWidth="25.0" />
@@ -23,16 +23,17 @@
         </rowConstraints>
          <children>
             <ScrollPane fx:id="scrollOrders" fitToWidth="true" focusTraversable="false" GridPane.columnIndex="1" GridPane.rowIndex="1" />
-            <GridPane alignment="CENTER" gridLinesVisible="true" GridPane.columnIndex="3" GridPane.rowIndex="1">
+            <GridPane alignment="CENTER" GridPane.columnIndex="3" GridPane.rowIndex="1">
               <columnConstraints>
                 <ColumnConstraints hgrow="SOMETIMES" />
               </columnConstraints>
               <rowConstraints>
                 <RowConstraints percentHeight="15.0" vgrow="SOMETIMES" />
+                  <RowConstraints percentHeight="2.0" vgrow="SOMETIMES" />
                 <RowConstraints vgrow="SOMETIMES" />
               </rowConstraints>
                <children>
-                  <GridPane gridLinesVisible="true">
+                  <GridPane>
                     <columnConstraints>
                         <ColumnConstraints hgrow="SOMETIMES" percentWidth="20.0" />
                       <ColumnConstraints hgrow="SOMETIMES" />
@@ -54,10 +55,10 @@
                             <RowConstraints vgrow="SOMETIMES" />
                           </rowConstraints>
                            <children>
-                              <AnchorPane fx:id="printOrderImgBtn" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+                              <AnchorPane fx:id="printOrderImgBtn" onMouseClicked="#printOrderImgBtnPressed" GridPane.columnIndex="1" GridPane.rowIndex="1" />
                            </children>
                         </GridPane>
-                        <GridPane gridLinesVisible="true" GridPane.columnIndex="1">
+                        <GridPane GridPane.columnIndex="1">
                           <columnConstraints>
                             <ColumnConstraints hgrow="SOMETIMES" />
                           </columnConstraints>
@@ -70,10 +71,10 @@
                               <AnchorPane fx:id="orderNameTopic" GridPane.rowIndex="1" />
                            </children>
                         </GridPane>
-                        <AnchorPane fx:id="doneOrderImgBtn" GridPane.columnIndex="2" />
+                        <AnchorPane fx:id="doneOrderImgBtn" onMouseClicked="#doneOrderImgBtnPressed" GridPane.columnIndex="2" />
                      </children>
                   </GridPane>
-                  <ScrollPane fx:id="scrollItems" prefHeight="200.0" prefWidth="200.0" GridPane.rowIndex="1" />
+                  <ScrollPane fx:id="scrollItems" prefHeight="200.0" prefWidth="200.0" GridPane.rowIndex="2" />
                </children>
             </GridPane>
          </children>
